--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,9 @@ params {
   saveReference = false
   saveTrimmed = false
   saveAlignedIntermediates = false
-  reads = "data/*_R{1,2}.fastq.gz"
+  reads = "reads/*.fastq.gz"
+  reads_folder = "reads"
+  reads_extension = "fastq.gz"
   singleEnd = false
   outdir = './results'
   multiqc_config = "$baseDir/conf/multiqc_config.yaml"
