--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@
  * name here.
  */
 
+process.container = 'nfcore/methylseq:1.0' // Container slug. Stable releases should specify release tag!!
 
 // Configurable variables
 params {
